Removed projects without known location and added formatting to workspace description on home page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,9 @@
                 <h3>Find awesome, non-traditional places to work around the world.</h3>
             </div>
         </div><! --/row -->
+        <div class="row centered">
+            <h4>(scroll down)</h4>
+        </div>
     </div><! --/container -->
 </div><! --/headerwrap -->
 
