--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -18,9 +18,37 @@
                             </div><!-- he view -->		
                         </div><!-- he wrap -->
                     </div><!--end col-4 -->
-                    <div class="col-md-5">
-                        <h2>{{ project.title }}</h2>
+                    <div class="col-md-5 project-description">
+                        <h2><a href="{{ project.website }}">{{ project.title }}</a></h2>
+                        <h3>{{ project.location }}</h3>
                         <p>{{ project.description }}</p>
+                        <div class="row">
+                            <div class="col-md-6 amenity-name">
+                                <h4>wifi:</h4>
+                            </div>
+                            <div class="col-md-6 amenity-status">
+                                <img src="{{ project.wifi }}">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 amenity-name">
+                                <h4>outlets:</h4>
+                            </div>
+                            <div class="col-md-6 amenity-status">
+                                <img src="{{ project.outlets }}">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 amenity-name">
+                                <h4>daily rate:</h4>
+                            </div>
+                            <div class="col-md-6 amenity-status">
+                                <h4>{{ project.dailyrate }}</h4>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <h4>{{ project.note }}</h4>
+                        </div>
                     </div><!--end col-8 -->
                 </div><!-- end col-12 -->
             {% endfor %}
